force-app/main/default/objects/Bypass_Automations__c/Bypass_Automations__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Standard bypass framework</description>
    <label>Bypass Automations</label>
</CustomObject>