force-app/main/default/objects/Bypass_Automations__c/fields/Bypass_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Triggers</label>
    <type>Checkbox</type>
</CustomField>