force-app/main/default/objects/Bypass_Automations__c/fields/Bypass_Validation_Rules__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Validation_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Validation Rules</label>
    <type>Checkbox</type>
</CustomField>